@@ -1,5 +1,7 @@
 package com.rookies5.Backend_MATE.service.impl;
 
+import com.rookies5.Backend_MATE.dto.request.CommentRequestDto;
+import com.rookies5.Backend_MATE.dto.response.CommentResponseDto;
 import com.rookies5.Backend_MATE.entity.BoardPost;
 import com.rookies5.Backend_MATE.entity.Comment;
 import com.rookies5.Backend_MATE.entity.User;
@@ -13,6 +15,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -23,51 +26,56 @@ public class CommentServiceImpl implements CommentService {
     private final BoardPostRepository boardPostRepository;
     private final UserRepository userRepository;
 
-    // 1. 댓글 작성
+    /**
+     * 1. 댓글 작성
+     */
     @Override
-    public CommentDto createComment(CommentDto commentDto) {
-        // 1. 댓글이 달릴 게시글과 작성자 찾기
-        BoardPost post = boardPostRepository.findById(commentDto.getPostId())
-                .orElseThrow(() -> new RuntimeException("게시글을 찾을 수 없습니다. ID: " + commentDto.getPostId()));
+    public CommentResponseDto createComment(CommentRequestDto requestDto) {
+        // 댓글이 달릴 게시글과 작성자 존재 여부 확인
+        BoardPost post = boardPostRepository.findById(requestDto.getPostId())
+                .orElseThrow(() -> new RuntimeException("게시글을 찾을 수 없습니다. ID: " + requestDto.getPostId()));
 
-        User author = userRepository.findById(commentDto.getAuthorId())
-                .orElseThrow(() -> new RuntimeException("사용자를 찾을 수 없습니다. ID: " + commentDto.getAuthorId()));
+        User author = userRepository.findById(requestDto.getAuthorId())
+                .orElseThrow(() -> new RuntimeException("사용자를 찾을 수 없습니다. ID: " + requestDto.getAuthorId()));
 
-        // 2. DTO -> Entity 변환
-        Comment comment = CommentMapper.mapToComment(commentDto, post, author);
-        
-        // 3. DB 저장
+        // DTO -> Entity 변환 (Mapper 활용)
+        Comment comment = CommentMapper.mapToEntity(requestDto, post, author);
+
+        // DB 저장
         Comment savedComment = commentRepository.save(comment);
 
-        // 4. 저장된 Entity -> DTO 변환 후 리턴
-        return CommentMapper.mapToCommentDto(savedComment);
+        // Entity -> Response DTO 변환 후 반환
+        return CommentMapper.mapToResponse(savedComment);
     }
 
-    // 2. 특정 게시글의 모든 댓글 조회 (오래된 순으로 정렬)
+    /**
+     * 2. 특정 게시글의 모든 댓글 조회 (작성일 기준 오름차순)
+     */
     @Transactional(readOnly = true)
     @Override
-    public List<CommentDto> getCommentsByPostId(Long postId) {
-        // 레포지토리에 findAllByPostIdOrderByCreatedAtAsc(postId) 메서드가 있다고 가정
-        List<Comment> comments = commentRepository.findAllByPostIdOrderByCreatedAtAsc(postId);
-
-        return comments.stream()
-                .map(CommentMapper::mapToCommentDto)
-                .toList();
+    public List<CommentResponseDto> getCommentsByPostId(Long postId) {
+        return commentRepository.findAllByPostIdOrderByCreatedAtAsc(postId).stream()
+                .map(CommentMapper::mapToResponse)
+                .collect(Collectors.toList());
     }
 
-    // 3. 댓글 수정
+    /**
+     * 3. 댓글 수정
+     */
     @Override
-    public CommentDto updateComment(Long commentId, CommentDto updatedComment) {
+    public CommentResponseDto updateComment(Long commentId, CommentRequestDto requestDto) {
         Comment comment = commentRepository.findById(commentId)
                 .orElseThrow(() -> new RuntimeException("댓글을 찾을 수 없습니다. ID: " + commentId));
 
-        // Dirty Checking: 댓글은 '내용(content)'만 수정 가능합니다.
-        comment.updateComment(updatedComment.getContent());
+        // Dirty Checking: 댓글 내용 업데이트
+        comment.updateComment(requestDto.getContent());
 
-        return CommentMapper.mapToCommentDto(comment);
+        return CommentMapper.mapToResponse(comment);
     }
 
-    // 4. 댓글 삭제 (Soft Delete는 엔티티의 @Where 설정에 의해 자동 적용됨)
+    /**
+     * 4. 댓글 삭제
+     */
     @Override
     public void deleteComment(Long commentId) {
         Comment comment = commentRepository.findById(commentId)
